# leanbridge

./: .gitignore  README.md  __init__.py  alpha_demo.py  complex_translation.py  demo.py  pyproject.toml
docs/: ARCHITECTURE.md
leanbridge/: __init__.py  config.yaml  interpreter.py
leanbridge/actions/: __init__.py  commands.py  definitions_extended.py  scopes.py
leanbridge/config/: __init__.py  registry.py
leanbridge/core/: __init__.py  objects.py  scopes.py
leanbridge/inference/: __init__.py  context.py  mapper.py
reverse/: __init__.py  converter.py  lexer.py
